@@ -309,6 +309,10 @@ PHP 8.5 UPGRADE NOTES
   . Added enchant_dict_remove() to put a word on the exclusion list and
     remove it from the session dictionary.
 
+- Intl:
+  . Added locale_is_right_to_left/Locale::isRightToLeft, returns true if
+    the locale is written right to left (after its enrichment with likely subtags).
+
 - Pdo\Sqlite:
   . Added support for Pdo\Sqlite::setAuthorizer(), which is the equivalent of
     SQLite3::setAuthorizer(). The only interface difference is that the
